# message-parser

./: .gitignore  pyproject.toml
message_parser/: body.py  headers.py  interface.py  message.py
test/: test_body.py  test_message.py  test_to_server.py
